--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python pip install black
+      - run: pip install black
       - run: python -m black app.py
       - run: python -m black config.py
       - run: python -m black check_encode.py
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python pip install pylint
+      - run: pip install pylint
       - run: python -m pylint app.py
       - run: python -m pylint config.py
       - run: python -m pylint check_encode.py
