--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python my_test.py
+      - run: python3 my_test.py
   formating:
     runs-on: ubuntu-latest
     steps:
@@ -20,14 +20,14 @@ jobs:
         with:
           python-version: '3.10' 
       - run: pip install black
-      - run: python -m black app.py
-      - run: python -m black config.py
-      - run: python -m black check_encode.py
-      - run: python -m black create_table.py
-      - run: python -m black display_list.py
-      - run: python -m black run.py
-      - run: python -m black shorty_api.py
-      - run: python -m black sql_table.py
+      - run: python3 -m black app.py
+      - run: python3 -m black config.py
+      - run: python3 -m black check_encode.py
+      - run: python3 -m black create_table.py
+      - run: python3 -m black display_list.py
+      - run: python3 -m black run.py
+      - run: python3 -m black shorty_api.py
+      - run: python3 -m black sql_table.py
   code-review:
     runs-on: ubuntu-latest
     steps:
@@ -36,11 +36,11 @@ jobs:
         with:
           python-version: '3.10' 
       - run: pip install pylint
-      - run: python -m pylint app.py
-      - run: python -m pylint config.py
-      - run: python -m pylint check_encode.py
-      - run: python -m pylint create_table.py
-      - run: python -m pylint display_list.py
-      - run: python -m pylint run.py
-      - run: python -m pylint shorty_api.py
-      - run: python -m pylint sql_table.py
+      - run: python3 -m pylint app.py
+      - run: python3 -m pylint config.py
+      - run: python3 -m pylint check_encode.py
+      - run: python3 -m pylint create_table.py
+      - run: python3 -m pylint display_list.py
+      - run: python3 -m pylint run.py
+      - run: python3 -m pylint shorty_api.py
+      - run: python3 -m pylint sql_table.py
