--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: pip install pylint
-      - run: python3 -m pylint app.py
-      - run: python3 -m pylint config.py
-      - run: python3 -m pylint check_encode.py
-      - run: python3 -m pylint create_table.py
-      - run: python3 -m pylint display_list.py
-      - run: python3 -m pylint run.py
-      - run: python3 -m pylint shorty_api.py
-      - run: python3 -m pylint sql_table.py
+      - run: pip install pyflakes
+      - run: python3 -m pyflakes app.py
+      - run: python3 -m pyflakes config.py
+      - run: python3 -m pyflakes check_encode.py
+      - run: python3 -m pyflakes create_table.py
+      - run: python3 -m pyflakes display_list.py
+      - run: python3 -m pyflakes run.py
+      - run: python3 -m pyflakes shorty_api.py
+      - run: python3 -m pyflakes sql_table.py
