--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           python-version: '3.10' 
       - run: pip install pyflakes
+      - run: python3 -m pyflakes app.py
       - run: python3 -m pyflakes config.py
       - run: python3 -m pyflakes check_encode.py
       - run: python3 -m pyflakes create_table.py
