--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           python-version: '3.10' 
       - run: pip install black
+      - run: python3 -m black app.py
       - run: python3 -m black config.py
       - run: python3 -m black check_encode.py
       - run: python3 -m black create_table.py
