--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: pip install pyflakes
-      - run: python3 -m pyflakes app.py
-      - run: python3 -m pyflakes config.py
-      - run: python3 -m pyflakes check_encode.py
-      - run: python3 -m pyflakes create_table.py
-      - run: python3 -m pyflakes display_list.py
-      - run: python3 -m pyflakes run.py
-      - run: python3 -m pyflakes shorty_api.py
-      - run: python3 -m pyflakes sql_table.py
+      - run: pip install flake8
+      - run: python3 -m flake8 app.py
+      - run: python3 -m flake8 config.py
+      - run: python3 -m flake8 check_encode.py
+      - run: python3 -m flake8 create_table.py
+      - run: python3 -m flake8 display_list.py
+      - run: python3 -m flake8 run.py
+      - run: python3 -m flake8 shorty_api.py
+      - run: python3 -m flake8 sql_table.py
