--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,14 @@ jobs:
       - run: python3 -m black shorty_api.py
       - run: python3 -m black sql_table.py
   code-review:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
       - run: pip install flake8
-      - run: python3 -m flake8 app.py
+      - run: python3 -m flake8 --select E203 app.py
       - run: python3 -m flake8 config.py
       - run: python3 -m flake8 check_encode.py
       - run: python3 -m flake8 create_table.py
