--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           python-version: '3.10' 
       - run: pip install flake8
-      - run: python3 -m flake8 --select E203 app.py
+      - run: python3 -m flake8 --ignore E203 app.py
       - run: python3 -m flake8 config.py
       - run: python3 -m flake8 check_encode.py
       - run: python3 -m flake8 create_table.py
