--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       - run: python3 -m flake8 --ignore W292,W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 config.py
       - run: python3 -m flake8 --ignore E722,W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 check_encode.py
       - run: python3 -m flake8 --ignore W292,E722,W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 create_table.py
-      - run: python3 -m flake8 --ignore W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 display_list.py
+      - run: python3 -m flake8 --ignore E225,W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 display_list.py
       - run: python3 -m flake8 --ignore W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 run.py
       - run: python3 -m flake8 --ignore W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 shorty_api.py
       - run: python3 -m flake8 --ignore W391,E203,F401,W291,F821,E302,W191,E501,E251,E231,E502,E101,E128,E712,E222,E303,W293,F841,E226,E202,E127,E241,E305 sql_table.py
